--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.0",
