--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "react": "^18.3.1",
   "react-dom": "^18.3.1",
   "react-router-dom": "^6.30.2"
+  "lucide-react": "^0.475.0"
 },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.0",
