--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-"dependencies": {
-  "@supabase/supabase-js": "^2.46.1",
-  "react": "^18.3.1",
-  "react-dom": "^18.3.1",
-  "react-router-dom": "^6.30.2"
-  "lucide-react": "^0.475.0"
-},
+  "dependencies": {
+    "@supabase/supabase-js": "^2.46.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.2",
+    "lucide-react": "^0.475.0"
+  },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.19",
